<resources>
    <string name="app_name">Iuran_GSS_2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masuk">Masuk</string>
    <string name="register">Daftar</string>
    <string name="hint_name">Masukkan nama lengkap anda</string>
    <string name="hint_address">Masukkan nomor rumah anda</string>
    <string name="hint_bloc">Masukkan blok anda</string>
    <string name="hint_handphone">Masukkan nomor handphone anda</string>
    <string name="hint_email">Masukkan email anda</string>
    <string name="hint_password">Masukkan password anda</string>
    <string name="iuran_keamanan">IURAN\nKEAMANAN</string>
    <string name="iuran_sampah">IURAN\nSAMPAH</string>
    <string name="dummy_name">Jocelyne Wonder</string>
    <string name="uang_kas">UANG\nKAS</string>
    <string name="riwayat_transaksi">RIWAYAT\nTRANSAKSI</string>
    <string name="bantuan">BANTUAN</string>
    <string name="selamat_pagi">Selamat Pagi 👋</string>
    <string name="payment_number">Payment Number</string>
    <string name="kirim_bukti">KIRIM BUKTI</string>
    <string name="nominal">Nominal</string>
    <string name="dummy_payment">IKXXXX</string>
    <string name="dummy_nominal">IDR 175,000</string>
    <string name="dummy_hint">Pembayaran akan dialihkan ke WhatsApp, sertakan bukti pembayaran berupa foto.</string>
    <string name="profile">PROFILE</string>
    <string name="admin">Admin</string>
    <string name="memberi_informasi">MEMBERI\nINFORMASI</string>
    <string name="aktivitas">AKTIVITAS</string>
    <string name="verifikasi_pembayaran">VERIFIKASI\nPEMBAYARAN</string>
    <string name="history">Riwayat\nTransaksi</string>
    <string name="nama_input">Nama : </string>
    <string name="jumlah_input">Jumlah : </string>
    <string name="status">Status : </string>
    <string name="complain">Komplain</string>
    <string name="pembayaran_input">No. Pembayaran : </string>
    <string name="keterangan_input">Keterangan : </string>
    <string name="nominal_input">Nominal : </string>
    <string name="email_input">Email : </string>
    <string name="telepon_input">No.Telp : </string>
    <string name="blok_input">No.Rumah/Blok : </string>
    <string name="accept">Terima</string>
    <string name="tolak">Tolak</string>
    <string name="notifikasi">Memberi\nInformasi</string>
    <string name="keterangan">Keterangan</string>
    <string name="tanggal">Tanggal</string>
    <string name="judul">Judul</string>
    <string name="isi">Isi</string>
    <string name="kirim">Kirim</string>
    <string name="dummy_date">17/08/24</string>
    <string name="email_already_taken">Email sudah digunakan</string>
    <string name="create_transaction_failed">Gagal membuat transaksi</string>
    <string name="get_transaction_failed">Gagal mengambil transaksi</string>
    <string name="get_username_failed">Gagal mengambil username</string>
    <string name="get_profile_failed">Gagal mengambil profile</string>

    <string name="hari_kemerdekaan">Hari Kemerdekaan</string>

    <string name="invalid_login">Email atau Password anda salah!</string>

    <!--  Login / Register  -->
    <string name="errorEmail">Format email anda tidak valid</string>
    <string name="errorName">Nama tidak boleh mengandung angka atau simbol</string>
    <string name="errorPass">Password kurang dari 8</string>
    <string name="description_bukti">Gambar bukti pembayaran</string>
    <string name="description_close">Tutup</string>
    <string name="description_send">Mengirim Bukti</string>
    <string name="description_logout">Keluar dari Aplikasi</string>
    <string name="logout">Keluar</string>

    <!--  List Transaction User  -->
    <string name="pendingText">Sedang Diproses 1x24 jam</string>
    <string name="rejectText">Transaksi anda ditolak</string>
    <string name="acceptText">Transaksi anda diterima</string>
    <string name="something_error">Terjadi kesalahan pada server</string>
    <string name="download_pdf">Download PDF</string>
    <string name="tentang_deskripsi">Aplikasi Iuran GSS dirancang guna melengkapi tugas projek berupa penulisan ilmiah dari Universitas Gunadarma, sebagai syarat kelulusan jenjang S1 pada jurusan Informatika</string>


</resources>