<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.admin.verifikasi.VerifikasiFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardCornerRadius="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/gray">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:src="@drawable/ic_back" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_verif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/verifikasi_pembayaran"
        android:textAlignment="center"
        android:textColor="@color/secondary"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/constraint"
        android:padding="@dimen/constraint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_verif">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/constraint"
                android:layout_marginTop="@dimen/constraint"
                android:layout_marginEnd="@dimen/constraint"
                android:textStyle="bold"
                android:text="@string/nama_input"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@id/tv_noPembayaran"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_noPembayaran"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pembayaran_input"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"

                app:layout_constraintEnd_toEndOf="@id/tv_nama"
                app:layout_constraintStart_toStartOf="@id/tv_nama"
                app:layout_constraintTop_toBottomOf="@id/tv_nama"
                app:layout_constraintBottom_toTopOf="@id/tv_blok"
                />

            <TextView
                android:id="@+id/tv_blok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/blok_input"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"

                app:layout_constraintEnd_toEndOf="@id/tv_nama"
                app:layout_constraintStart_toStartOf="@id/tv_nama"
                app:layout_constraintTop_toBottomOf="@id/tv_noPembayaran"
                app:layout_constraintBottom_toTopOf="@id/tv_telpon"/>

            <TextView
                android:id="@+id/tv_telpon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/telepon_input"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"

                app:layout_constraintEnd_toEndOf="@id/tv_nama"
                app:layout_constraintStart_toStartOf="@id/tv_nama"
                app:layout_constraintTop_toBottomOf="@id/tv_blok"
                app:layout_constraintBottom_toTopOf="@id/tv_email"/>
            <TextView
                android:id="@+id/tv_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/email_input"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"

                app:layout_constraintEnd_toEndOf="@id/tv_nama"
                app:layout_constraintStart_toStartOf="@id/tv_nama"
                app:layout_constraintTop_toBottomOf="@id/tv_telpon"
                app:layout_constraintBottom_toTopOf="@id/tv_nominal"/>
            <TextView
                android:id="@+id/tv_nominal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nominal_input"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"

                app:layout_constraintEnd_toEndOf="@id/tv_nama"
                app:layout_constraintStart_toStartOf="@id/tv_nama"
                app:layout_constraintTop_toBottomOf="@id/tv_email"
                app:layout_constraintBottom_toTopOf="@id/tv_keterangan"/>
            <TextView
                android:id="@+id/tv_keterangan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/keterangan_input"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"

                app:layout_constraintEnd_toEndOf="@id/tv_nama"
                app:layout_constraintStart_toStartOf="@id/tv_nama"
                app:layout_constraintTop_toBottomOf="@id/tv_nominal"
                app:layout_constraintBottom_toTopOf="@id/input_keterangan"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_keterangan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/constraint"
                android:layout_marginEnd="@dimen/constraint"
                android:layout_marginBottom="@dimen/constraint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_keterangan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/btn_accept"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/keterangan"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept"
                android:paddingStart="@dimen/constraint"
                android:paddingEnd="@dimen/constraint"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:backgroundTint="@color/primary"
                android:textColor="@color/white"
                android:layout_marginEnd="@dimen/constraint"
                android:layout_marginBottom="@dimen/constraint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_keterangan"

                />

            <Button
                android:id="@+id/btn_reject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tolak"
                android:paddingStart="@dimen/constraint"
                android:paddingEnd="@dimen/constraint"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:backgroundTint="@color/red"
                android:layout_marginEnd="@dimen/constraint"
                android:layout_marginBottom="@dimen/constraint"
                app:layout_constraintEnd_toStartOf="@id/btn_accept"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_accept"

                />



        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>