<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.register.RegisterFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/register"
        android:textColor="@color/secondary"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    Nama lengkap-->
    <com.example.iuran_gss_2.customview.MyEditText
        android:id="@+id/name_input"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_person_icon"
        android:drawablePadding="10dp"
        android:hint="@string/hint_name"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/no_rumah_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register" />


    <!--    Nomor rumah-->
    <com.example.iuran_gss_2.customview.MyEditText
        android:id="@+id/no_rumah_input"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_house_number"
        android:drawablePadding="12dp"
        android:hint="@string/hint_address"
        android:inputType="number"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/bloc_input"
        app:layout_constraintEnd_toEndOf="@id/name_input"
        app:layout_constraintStart_toStartOf="@id/name_input"
        app:layout_constraintTop_toBottomOf="@+id/name_input" />


    <!--    Bloc rumah-->
    <com.example.iuran_gss_2.customview.MyEditText
        android:id="@+id/bloc_input"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_blok_icon"
        android:drawablePadding="12dp"
        android:hint="@string/hint_bloc"
        android:inputType="number"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/handphone_input"
        app:layout_constraintEnd_toEndOf="@id/no_rumah_input"
        app:layout_constraintStart_toStartOf="@id/no_rumah_input"
        app:layout_constraintTop_toBottomOf="@+id/no_rumah_input" />

    <!--    Nomor Handphone-->
    <com.example.iuran_gss_2.customview.MyEditText
        android:id="@+id/handphone_input"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_phone_icon"
        android:drawablePadding="12dp"
        android:hint="@string/hint_handphone"
        android:inputType="number"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/email_input"
        app:layout_constraintEnd_toEndOf="@id/bloc_input"
        app:layout_constraintStart_toStartOf="@id/bloc_input"
        app:layout_constraintTop_toBottomOf="@+id/bloc_input" />

    <!--Email-->
    <com.example.iuran_gss_2.customview.MyEditText
        android:id="@+id/email_input"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="12dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/handphone_input"
        app:layout_constraintStart_toStartOf="@id/handphone_input"
        app:layout_constraintTop_toBottomOf="@+id/handphone_input"
        />


    <!--    Password-->
    <com.example.iuran_gss_2.customview.MyEditText
        android:id="@+id/password_input"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock_icon"
        android:drawablePadding="12dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="16sp"
        app:isPassword="true"
        app:layout_constraintEnd_toEndOf="@id/email_input"
        app:layout_constraintStart_toStartOf="@id/email_input"
        app:layout_constraintTop_toBottomOf="@+id/email_input"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primary"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="@id/password_input"
        app:layout_constraintStart_toStartOf="@id/password_input"
        app:layout_constraintTop_toBottomOf="@id/password_input" />

</androidx.constraintlayout.widget.ConstraintLayout>