<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sendNotificationLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.send_notification.SendNotificationFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:cardCornerRadius="64dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/gray">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:src="@drawable/ic_back" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_notifikasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/notifikasi"
            android:textAlignment="center"
            android:textColor="@color/secondary"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@id/btn_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_back" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tanggal_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/constraint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tanggal_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tanggal"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/judul_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/constraint"
        app:layout_constraintStart_toStartOf="@id/tanggal_layout"
        app:layout_constraintTop_toBottomOf="@id/tanggal_layout"
        app:layout_constraintEnd_toEndOf="@id/tanggal_layout"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/judul_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/judul"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/isi_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/constraint"
        app:layout_constraintStart_toStartOf="@id/tanggal_layout"
        app:layout_constraintTop_toBottomOf="@id/judul_layout"
        app:layout_constraintEnd_toEndOf="@id/tanggal_layout"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/isi_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/isi"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kirim"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingStart="48dp"
        android:paddingEnd="48dp"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/constraint"
        android:backgroundTint="@color/primary"
        app:layout_constraintStart_toStartOf="@id/tanggal_layout"
        app:layout_constraintEnd_toEndOf="@id/tanggal_layout"
        app:layout_constraintTop_toBottomOf="@id/isi_layout"
        />

</androidx.constraintlayout.widget.ConstraintLayout>