<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.login.LoginFragment">



    <ImageView
        android:id="@+id/iv_masuk"
        android:layout_width="@dimen/image_logo_login"
        android:layout_height="@dimen/image_logo_login"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/masuk"
        app:layout_constraintBottom_toTopOf="@id/tv_masuk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_masuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masuk"
        android:textColor="@color/secondary"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Email-->
    <com.example.iuran_gss_2.customview.MyEditText
        android:id="@+id/email_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:drawablePadding="12dp"
        android:padding="10dp"
        android:textSize="16sp"
        app:isEmail="true"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/custom_email_icon"
        android:hint="@string/hint_email"
        android:background="@drawable/custom_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_masuk"/>

    <!--    Password-->
    <com.example.iuran_gss_2.customview.MyEditText
        android:id="@+id/password_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock_icon"
        android:layout_marginTop="16dp"
        android:drawablePadding="12dp"
        android:padding="10dp"
        android:textSize="16sp"
        app:isPassword="true"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        app:layout_constraintStart_toStartOf="@id/email_input"
        app:layout_constraintEnd_toEndOf="@id/email_input"
        app:layout_constraintTop_toBottomOf="@+id/email_input"/>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/primary"
        android:text="@string/masuk"
        android:textColor="@color/white"
        android:textSize="18sp"

        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="@id/password_input"
        app:layout_constraintStart_toStartOf="@id/password_input"
        app:layout_constraintTop_toBottomOf="@id/password_input" />

</androidx.constraintlayout.widget.ConstraintLayout>